version/0.21/_sources/api/solver/_autosummary/settings/background_2.rst.txt
:orphan:

.. _background_2:

background
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.background_2.background
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ===================================================================================================================================================

Attribute                                                                                                                                                                                                          Summary

====================================================================   ===================================================================================================================================================
:ref:`hide_environment_keep_effects <hide_environment_keep_effects>`                                 Choose whether or not to hide the environment background while keeping the visual effects on the displayed object(s).

:ref:`environment_image <environment_image>`                                                                                                                  Select a 3D environment for the advanced raytracing display.

:ref:`vertical <vertical>`                                                                                                                              Rotate the environment vertically by entering degrees of rotation.

:ref:`horizontal <horizontal>`                                                                                                                        Rotate the environment horizontally by entering degrees of rotation.

:ref:`spin <spin>`                                                                                                                   Spin/Rotate the environment along its view direction by entering degrees of rotation.

:ref:`env_color <env_color>`                                                                                                                                                    Set the color of the environment lighting.

:ref:`env_intensity <env_intensity>`                                                                                                                                        Set the intensity of the environment lighting.

:ref:`view_zoom <view_zoom>`                                                                                                       Set the field of view, which is how much of the environment is visible as a background.

:ref:`show_backplate <show_backplate>`                                                                                              Choose whether or not a backplate (image or color) is shown on top of the environment.

:ref:`backplate_color <backplate_color>`                                                                                                                                                          Set the backplate color.

:ref:`backplate_image <backplate_image>`                                                                                Set the backplate image. This will override the backplate color unless the image is set to 'none'.

:ref:`env_light_upvec <env_light_upvec>`                                                                                                                                                          'env_light_upvec' child.

:ref:`env_light_dirvec <env_light_dirvec>`                                                                                                                                                       'env_light_dirvec' child.

:ref:`activate_env_ground <activate_env_ground>`                           Choose whether or not the displayed object's location in the environment is fixed, so its location appears consistent as the object is rotated.

:ref:`activate_env_ground_shadow <activate_env_ground_shadow>`                                                                Choose whether or not the displayed objects cast a shadow based on the environment lighting.

:ref:`model_scale <model_scale>`                                                                                                                                                                 Set the model scale in %.

:ref:`env_light_ground_height <env_light_ground_height>`                                                        Specify the ground height. This is where the bottom of the environment will be projected and shadows cast.

:ref:`is_ground_shadow_at_fix_axis <is_ground_shadow_at_fix_axis>`                                             Choose whether or not to fix the shadow at specific axis and not the dynamically with environment rotation.

:ref:`ground_shadow_axis <ground_shadow_axis>`                                                                                                                       Select an axis where ground shadow will be displayed.

====================================================================   ===================================================================================================================================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`raytracing_options <raytracing_options>`       'raytracing_options' child.

==============================================   ===============================

